[package]
name = "day7"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["part2"] # change this to change the part logic
part1 = []
part2 = []

[dependencies]
aoc_utils = { path= "../aoc_utils" , version = "0.1.0" }
rstest = "0.18.2"
derive_more = "0.99"
